--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>再次修改 title-Zhi</title>
+    <link rel="stylesheet" href="all.css">
+    <title>title</title>
   </head>
   <body>
     <h1>標題</h1>
-    <p>這是一個段落。</p>
-    <h2>修改H2標題-Hugh</h2>
   </body>
 </html>
