--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>成員列表</h1>
     <ul>
         <li>成員一名稱：Zhi</li>
-        <li>成員二名稱：Hugh</li>
+        <li>成員二名稱：Hugh桑</li>
         <li>成員三名稱：</li>
         <li>成員四名稱：</li>
     </ul>
