--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <li>成員一名稱：Zhi313</li>
       <li>成員二名稱：Hugh桑</li>
       <li>成員三名稱：Youmin</li>
-      <li>成員四名稱：Winter</li>
+      <li>成員四名稱：Winternightsix</li>
     </ul>
   </body>
 </html>
